<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical" >

  <TextView
    style="@style/wrap_w_wrap_h"
    android:padding="@dimen/norm_spacing"
    android:text="@string/activity_add_firework_text" />

  <EditText
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:text="@string/activity_add_firework_input_title_name" />

  <EditText
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:text="@string/activity_add_firework_input_title_color" />

  <EditText
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:text="@string/activity_add_firework_input_title_type" />

  <EditText
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:text="@string/activity_add_firework_input_title_noise" />

</LinearLayout>